# noah_firmware_py

./: README.md
noah_firmware_py/: package.xml  setup.cfg  setup.py
noah_firmware_py/noah_firmware_py/: drive.py  motors.py  noah_firmware_node.py
noah_firmware_py_launch/: CMakeLists.txt  package.xml
noah_firmware_py_launch/config/: config.yaml
noah_firmware_py_launch/launch/: noah_firmware.launch.py
