<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>noah_firmware_py_launch</name>
  <version>0.0.1</version>
  <description>
    Launchers for noah_firmware_py_launch
  </description>
  <maintainer email="jginesclavero@gmail.com">Jonatan Gines</maintainer>
  <license>BSD</license>

  <author email="jginesclavero@gmail.com">Jonatan Gines</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>ament_index_cpp</depend>
  <build_depend>launch_ros</build_depend>
  
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>rclcpp</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>